@@ -1,3 +1,13 @@
+Sat Jul 13 23:11:37 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* ellint.c (gsl_sf_ellint_Kcomp_e): improved error estimate to
+ 	take cancellation of y=1-k^2 into account near k=1 
+
+Sun Jul  7 21:39:12 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test_bessel.c (test_bessel): increased tolerance on test of
+ 	bessel_Jn_array
+
 Tue May 28 21:04:29 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* psi.c (gsl_sf_psi_1piy_e): changed log(y) to log(ay) since
